--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,30 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+appdirs==1.4.1            # via setuptools
 blinker==1.4              # via pelican
+cffi==1.9.1               # via cryptography
+cryptography==1.7.2       # via paramiko
 docutils==0.13.1          # via pelican
+enum34==1.1.6             # via cryptography
+fabric==1.13.1
 feedgenerator==1.9        # via pelican
+idna==2.2                 # via cryptography
+ipaddress==1.0.18         # via cryptography
 jinja2==2.9.5             # via pelican
 markdown==2.6.8
-MarkupSafe==0.23          # via jinja2
+markupsafe==0.23          # via jinja2
+packaging==16.8           # via setuptools
+paramiko==2.1.2           # via fabric
 pelican==3.7.1
+pyasn1==0.2.2             # via cryptography, paramiko
+pycparser==2.17           # via cffi
 pygments==2.2.0           # via pelican
+pyparsing==2.1.10         # via packaging
 python-dateutil==2.6.0    # via pelican
 pytz==2016.10             # via feedgenerator, pelican
-six==1.10.0               # via feedgenerator, pelican, python-dateutil
+six==1.10.0               # via cryptography, feedgenerator, packaging, pelican, python-dateutil, setuptools
 unidecode==0.4.20         # via pelican
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools                # via cryptography
